对jar任务优化